--- a/css/master.css
+++ b/css/master.css
@@ -11,3 +11,65 @@ body {
     font-family: 'Big Shoulders Display';
     margin: 0;
 }
+main { 
+    /* background-color: blue; */
+    height: 100vh;
+        background-color: red;
+}
+.grid-box { 
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 0px;
+
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.grid-box div.orange {
+    background-color: var(--Bright-orange);
+}
+.grid-box div.blue {
+    background-color: var(--Dark-cyan);
+}
+.grid-box div.bluedark {
+    background-color: var(--Very-dark-cyan);
+}
+
+.grid-box .box { 
+    padding: 20px 40px;
+}
+.grid-box .box h1 {
+    text-transform: uppercase;
+    color: var(--Very-light-gray-background-headings-buttons);
+    
+}
+.grid-box .box p {
+    color: var(--Transparent-white-paragraphs);
+    font-family: 'Lexend Deca', sans-serif;
+    font-weight: 400;
+    width: 100%;
+    background-color: red;
+}
+.grid-box .box button { 
+    margin-top: 80px;
+    margin-bottom: 40px;
+    padding: 10px 30px;
+    border: none;
+    background-color: white;
+    border-radius: 2rem;
+    cursor: pointer;
+}
+.orange { 
+    color: var(--Bright-orange);
+}
+.blue { 
+    color: var(--Dark-cyan);
+}
+.bluedark { 
+    color: var(--Very-dark-cyan);
+}
+.grid-box .box button:hover { 
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+}
